--- a/debian/contrail/debian/control
+++ b/debian/contrail/debian/control
@@ -31,7 +31,7 @@ Build-Depends: autoconf,
                unzip,
                vim-common,
                libsnmp-python,
-               libipfix,
+               libipfix-dev,
                librdkafka-dev,
                librdkafka1,
                cassandra-cpp-driver,
