--- a/debian/contrail/debian/control
+++ b/debian/contrail/debian/control
@@ -229,6 +229,7 @@ Description: OpenContrail control-dns
  Provides contrail DNS services
 
 Package: contrail-vrouter-agent
+Pre-Depends: ${misc:Pre-Depends}, debconf
 Depends: adduser,
          contrail-lib (>= ${binary:Version}),
          contrail-vrouter,
@@ -237,6 +238,7 @@ Depends: adduser,
          ${shlibs:Depends}
 Recommends: contrail-nodemgr (>= ${source:Version}),
 Architecture: amd64 armhf
+Conflicts: apport
 Description: OpenContrail vrouter agent
  OpenContrail is a network virtualization solution that provides an overlay
  virtual-network to virtual-machines, containers or network namespaces.
