--- a/debian/contrail/debian/rules
+++ b/debian/contrail/debian/rules
@@ -27,7 +27,8 @@ TARGETS=control-node:node_mgr \
 
 override_dh_auto_build:
 	cd debian/manpages; ronn -r *.ronn
-	(cd ${SB_TOP}; scons -j${NUMJOBS} --opt=production --root=${INSTALL_ROOT} install)
+	# TODO: use ${NUMJOBS} when #1476261 is fixed
+	(cd ${SB_TOP}; scons -j1 --opt=production --root=${INSTALL_ROOT} install)
 	mkdir -p ${INSTALL_ROOT}/_debian/tmp
 	(cd usr/src/vrouter && tar zcf ${INSTALL_ROOT}/_debian/tmp/contrail-vrouter-$(DEB_UPSTREAM_VERSION).tar.gz .)
 	sed "s/__VERSION__/$(DEB_UPSTREAM_VERSION)/g" debian/dkms.conf.in > usr/src/vrouter/dkms.conf
