--- a/debian/contrail-web-controller/debian/rules
+++ b/debian/contrail-web-controller/debian/rules
@@ -1,6 +1,8 @@
 #!/usr/bin/make -f
 
-BUILD_ROOT=$(shell pwd)
+SB_TOP := $(shell pwd | sed -re "s/(.*)\/build\/packages(.*)/\1/")
+INSTALL_ROOT := $(shell pwd)
+export REPO=${SB_TOP}/contrail-web-controller,webController
 
 %:
 	dh $@
@@ -9,3 +11,13 @@ override_dh_installinit:
 	dh_installinit
 	dh_installinit --name=contrail-webui-jobserver
 	dh_installinit --name=contrail-webui-webserver
+
+override_dh_auto_build:
+	# We can't use make package directly because it tries to fetch third party
+	# from network which is not available during build
+	(cd ${SB_TOP}/contrail-web-core; \
+	./generate-files.sh 'prod-env' $(REPO))
+
+override_dh_install:
+	cp -r -a contrail-web-controller/webroot ${INSTALL_ROOT}
+	dh_install
