Install libssl-dev as build requirement

--- a/debian/contrail/debian/control
+++ b/debian/contrail/debian/control
@@ -13,6 +13,7 @@ Build-Depends: autoconf,
                debhelper (>= 8.0.0),
                flex,
                libcurl4-openssl-dev,
+               libssl-dev,
                libexpat-dev,
                libgettextpo0,
                libprotobuf-dev,
