--- a/debian/contrail/debian/rules
+++ b/debian/contrail/debian/rules
@@ -19,11 +19,17 @@ TARGETS=control-node:node_mgr \
 KERNELDIR?=/lib/modules/$(shell ls /lib/modules/ | head -1)/build
 SCONS_OPTS=--opt=production --optimization=production --root=${INSTALL_ROOT} --kernel-dir=${KERNELDIR}
 
+ifneq (,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
+    NUMJOBS = $(patsubst parallel=%,%,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
+    SCONS_OPTS += -j $(NUMJOBS)
+endif
+
 %:
 	dh $@ --with python2
 
 override_dh_auto_build:
 	cd debian/manpages; ronn -r *.ronn
+	(cd ${SB_TOP}; scons ${SCONS_OPTS} install || true)
 	(cd ${SB_TOP}; scons ${SCONS_OPTS} install)
 	mkdir -p ${INSTALL_ROOT}/_debian/tmp
 	(cd usr/src/vrouter && tar zcf ${INSTALL_ROOT}/_debian/tmp/contrail-vrouter-$(DEB_UPSTREAM_VERSION).tar.gz .)
