--- a/debian/contrail/debian/control
+++ b/debian/contrail/debian/control
@@ -45,7 +45,7 @@ Depends: adduser,
          librdkafka1 (>= 0.8.5),
          python-bottle (>= 0.11.6),
          python-contrail (>= ${source:Version}),
-         python-kafka-python (>= 0.9.2),
+         python-kafka (>= 0.9.2) | python-kafka-python (>= 0.9.2),
          python-pkg-resources,
          python-redis (>= 2.8.0),
          python-requests (>= 1.1.0),
