--- a/debian/contrail/debian/rules
+++ b/debian/contrail/debian/rules
@@ -58,7 +58,7 @@ override_dh_auto_build:
 	python ${SB_TOP}/tools/packages/utils/generate_doc_index.py ${INSTALL_ROOT}/usr/share/doc/contrail-docs/html/messages
 
 override_dh_auto_test:
-	(cd ${SB_TOP}; sudo KERNELDIR=$(KERNELDIR) RTE_KERNELDIR=$(KERNELDIR) USER=$(USER) scons --opt=production --optimization=production --root=${INSTALL_ROOT} --kernel-dir=$(KERNELDIR) test)
+	(cd ${SB_TOP}; KERNELDIR=$(KERNELDIR) RTE_KERNELDIR=$(KERNELDIR) USER=$(USER) scons --opt=production --optimization=production --root=${INSTALL_ROOT} --kernel-dir=$(KERNELDIR) test)
 
 override_dh_auto_clean:
 	dh_auto_clean
